# ralphy-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  justfile
.github/workflows/: ci.yml
docs/: COMPARISON.md
examples/: PRD.md  tasks.yaml
src/: ai.rs  cli.rs  config.rs  git.rs  lib.rs  main.rs  monitor.rs  notifications.rs  prd.rs  prompt.rs
tests/: integration_tests.rs
